[project]
name = "pwm-fan-control"
description = "PWM fan control for Raspberry Pi inside Docker"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "gpiozero==2.0.1",
    "rpi-gpio==0.7.1",
    "schedule==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-mock==3.14.0",
    "ruff==0.11.9",
]

[tool.setuptools]
py-modules = ["main"]

[tool.ruff.lint]
extend-select = ["E", "W", "I", "B", "Q"]
